[tool.poetry]
name = "shipchain-common"
version = "1.0.20"
description = "A PyPI package containing shared code for ShipChain's Python/Django projects."

license = "Apache-2.0"

authors = [
    "Adam Hodges <ahodges@shipchain.io>",
    "Clovis Djiometsa <cngnitewe@shipchain.io>",
    "James Neyer <jneyer@shipchain.io>"
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/ShipChain/python-common"
homepage = "https://github.com/ShipChain/python-common"

keywords = ['shipchain', 'transmission']

[tool.poetry.dependencies]
python = ">=3.6,<3.8"  # Compatible python versions must be declared here

aws-requests-auth = "~0.4"
boto3 = "~1.9"
cryptography = "~2.5"
django = "~2.2.7"
django-enumfields = "~0.10.0"
django-influxdb-tagged-metrics = '==1.3.3'
djangorestframework = "~3.10"
djangorestframework-jsonapi = "~3"
drf-nested-routers = "^0.91.0"
python-dateutil = "~2.7.5"
requests = "^2.21"

[tool.poetry.dev-dependencies]
bandit = "^1.5"
coverage = "~4.5.1"
djangorestframework-simplejwt = {git = "git://github.com/ShipChain/django-rest-framework-simplejwt.git", rev = "3cecdfc8050b691e51e7d45229d8bd7c03a8d6c2"}
httpretty = "~=0.9"
prospector = "~1.1.6.2"
pytest = "^3.0"
pytest-cov = "^2.6"
pytest-django = "^3.6"
pytest-mock = "^1.10"
safety = "^1.8"

[tool.poetry.plugins."pytest11"]
"json_asserter" = "shipchain_common.test_utils.json_asserter"
